work-in-progress/gl/gengl/parsegl.go

// line 1 "parsegl.rl"
//
// To compile:
//
//   ragel -Z -G2 -o parsegl.go parsegl.rl
//
// To show a diagram of the state machine:
//
//   ragel -V -G2 -p -o parsegl.dot parsegl.rl
//   dot -Tsvg -o parsegl.svg parsegl.dot
//   chrome parsegl.svg
//

package main

import (
	"fmt"
	"strings"
)


// line 24 "parsegl.go"
const parsegl_start int = 193
const parsegl_first_final int = 193
const parsegl_error int = 0

const parsegl_en_main int = 193
const parsegl_en_skiperror int = 192


// line 24 "parsegl.rl"


func parse(data string, header *Header) error {
	var cs, p, pe int
	var ts, te, act, eof int

	pe = len(data)
	eof = len(data)

	_, _, _ = ts, te, act

	//stack := make([]int, 32)
	//top := 0

	var curline = 1

	var m0, m1, m2, m3, m4, m5 int
	var heading string
	var lineblock int
	var ifblock int
	var f Func

	
// line 57 "parsegl.go"
	{
	cs = parsegl_start
	ts = 0
	te = 0
	act = 0
	}

// line 65 "parsegl.go"
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 193:
		goto st_case_193
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 194:
		goto st_case_194
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 195:
		goto st_case_195
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 196:
		goto st_case_196
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	case 161:
		goto st_case_161
	case 162:
		goto st_case_162
	case 163:
		goto st_case_163
	case 164:
		goto st_case_164
	case 165:
		goto st_case_165
	case 166:
		goto st_case_166
	case 167:
		goto st_case_167
	case 168:
		goto st_case_168
	case 169:
		goto st_case_169
	case 170:
		goto st_case_170
	case 171:
		goto st_case_171
	case 172:
		goto st_case_172
	case 173:
		goto st_case_173
	case 174:
		goto st_case_174
	case 175:
		goto st_case_175
	case 176:
		goto st_case_176
	case 177:
		goto st_case_177
	case 178:
		goto st_case_178
	case 179:
		goto st_case_179
	case 180:
		goto st_case_180
	case 181:
		goto st_case_181
	case 182:
		goto st_case_182
	case 183:
		goto st_case_183
	case 184:
		goto st_case_184
	case 185:
		goto st_case_185
	case 186:
		goto st_case_186
	case 187:
		goto st_case_187
	case 188:
		goto st_case_188
	case 189:
		goto st_case_189
	case 190:
		goto st_case_190
	case 191:
		goto st_case_191
	case 192:
		goto st_case_192
	case 197:
		goto st_case_197
	case 198:
		goto st_case_198
	}
	goto st_out
tr2:
// line 47 "parsegl.rl"

 curline++ 
// line 128 "parsegl.rl"

te = p+1
{
				// Reset heading comment.
				heading = ""

				// Start new line block.
				lineblock++
			}
	goto st193
tr22:
// line 47 "parsegl.rl"

 curline++ 
// line 92 "parsegl.rl"

te = p+1
{
				// Ignore defines within conditional blocks other than the top level ifndef.
				if ifblock == 1 && strings.HasPrefix(data[m0:m1], "GL_") {
					header.Define = append(header.Define, Define{Name: data[m0:m1], Value: data[m2:m3], Heading: heading, LineBlock: lineblock})
					heading = ""
				}
			}
	goto st193
tr34:
// line 47 "parsegl.rl"

 curline++ 
// line 83 "parsegl.rl"

te = p+1

	goto st193
tr38:
// line 47 "parsegl.rl"

 curline++ 
// line 78 "parsegl.rl"

te = p+1
{
				ifblock--
			}
	goto st193
tr43:
// line 47 "parsegl.rl"

 curline++ 
// line 74 "parsegl.rl"

te = p+1
{
				ifblock++
			}
	goto st193
tr53:
// line 47 "parsegl.rl"

 curline++ 
// line 67 "parsegl.rl"

te = p+1

	goto st193
tr119:
// line 120 "parsegl.rl"

te = p+1
{
				if (ifblock == 1) {
					header.Func = append(header.Func, f)
				}
			}
	goto st193
tr179:
// line 47 "parsegl.rl"

 curline++ 
// line 70 "parsegl.rl"

te = p+1

	goto st193
tr198:
// line 110 "parsegl.rl"

te = p+1

	goto st193
tr213:
// line 103 "parsegl.rl"

p = (te) - 1
{
				if (ifblock == 1) {
					header.Type = append(header.Type, Type{Name: data[m2:m3], Type: data[m0:m1], Comment: strings.TrimSpace(data[m4:m5])})
				}
			}
	goto st193
tr221:
// line 47 "parsegl.rl"

 curline++ 
// line 103 "parsegl.rl"

te = p+1
{
				if (ifblock == 1) {
					header.Type = append(header.Type, Type{Name: data[m2:m3], Type: data[m0:m1], Comment: strings.TrimSpace(data[m4:m5])})
				}
			}
	goto st193
tr266:
// line 64 "parsegl.rl"

te = p
p--

	goto st193
tr268:
// line 47 "parsegl.rl"

 curline++ 
// line 58 "parsegl.rl"

te = p+1
{
				heading = strings.Trim(data[m0:m1], " *")
				lineblock++
			}
	goto st193
tr269:
// line 103 "parsegl.rl"

te = p
p--
{
				if (ifblock == 1) {
					header.Type = append(header.Type, Type{Name: data[m2:m3], Type: data[m0:m1], Comment: strings.TrimSpace(data[m4:m5])})
				}
			}
	goto st193
	st193:
// line 1 "NONE"

ts = 0

		if p++; p == pe {
			goto _test_eof193
		}
	st_case_193:
// line 1 "NONE"

ts = p

// line 632 "parsegl.go"
		switch data[p] {
		case 9:
			goto st1
		case 10:
			goto tr2
		case 32:
			goto st1
		case 35:
			goto st5
		case 47:
			goto st48
		case 71:
			goto st51
		case 101:
			goto st117
		case 116:
			goto st129
		case 125:
			goto st128
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 9:
			goto st1
		case 10:
			goto tr2
		case 32:
			goto st1
		case 47:
			goto st2
		}
		goto st0
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 42 {
			goto st3
		}
		goto st0
tr5:
// line 47 "parsegl.rl"

 curline++ 
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
// line 693 "parsegl.go"
		switch data[p] {
		case 10:
			goto tr5
		case 42:
			goto st4
		}
		goto st3
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 10:
			goto tr5
		case 42:
			goto st4
		case 47:
			goto st194
		}
		goto st3
	st194:
		if p++; p == pe {
			goto _test_eof194
		}
	st_case_194:
		switch data[p] {
		case 9:
			goto st194
		case 32:
			goto st194
		}
		goto tr266
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 9:
			goto st6
		case 32:
			goto st6
		case 100:
			goto st7
		case 101:
			goto st19
		case 105:
			goto st35
		case 112:
			goto st43
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 9:
			goto st6
		case 32:
			goto st6
		case 100:
			goto st7
		case 101:
			goto st19
		case 105:
			goto st28
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		if data[p] == 101 {
			goto st8
		}
		goto st0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		if data[p] == 102 {
			goto st9
		}
		goto st0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		if data[p] == 105 {
			goto st10
		}
		goto st0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		if data[p] == 110 {
			goto st11
		}
		goto st0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		if data[p] == 101 {
			goto st12
		}
		goto st0
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 9:
			goto st13
		case 32:
			goto st13
		}
		goto st0
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 9:
			goto st13
		case 32:
			goto st13
		case 95:
			goto tr20
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr20
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr20
			}
		default:
			goto tr20
		}
		goto st0
tr20:
// line 88 "parsegl.rl"

 m0 = p; m2, m3 = 0, 0 
// line 88 "parsegl.rl"

 m1 = p+1 
	goto st14
tr23:
// line 88 "parsegl.rl"

 m1 = p+1 
	goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
// line 866 "parsegl.go"
		switch data[p] {
		case 9:
			goto st15
		case 10:
			goto tr22
		case 32:
			goto st15
		case 95:
			goto tr23
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr23
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr23
			}
		default:
			goto tr23
		}
		goto st0
tr25:
// line 90 "parsegl.rl"

 m2 = p 
// line 90 "parsegl.rl"

 m3 = p+1 
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
// line 903 "parsegl.go"
		switch data[p] {
		case 9:
			goto tr25
		case 10:
			goto tr22
		case 32:
			goto st15
		}
		goto tr24
tr24:
// line 90 "parsegl.rl"

 m2 = p 
// line 90 "parsegl.rl"

 m3 = p+1 
	goto st16
tr26:
// line 90 "parsegl.rl"

 m3 = p+1 
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
// line 931 "parsegl.go"
		switch data[p] {
		case 10:
			goto tr22
		case 32:
			goto st17
		}
		goto tr26
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 10:
			goto tr22
		case 32:
			goto st18
		}
		goto tr26
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 9:
			goto st18
		case 10:
			goto tr22
		case 32:
			goto st18
		}
		goto st0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 108:
			goto st20
		case 110:
			goto st24
		}
		goto st0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 105:
			goto st21
		case 115:
			goto st23
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		if data[p] == 102 {
			goto st22
		}
		goto st0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		if data[p] == 10 {
			goto tr34
		}
		goto st22
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		if data[p] == 101 {
			goto st22
		}
		goto st0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		if data[p] == 100 {
			goto st25
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if data[p] == 105 {
			goto st26
		}
		goto st0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		if data[p] == 102 {
			goto st27
		}
		goto st0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		if data[p] == 10 {
			goto tr38
		}
		goto st27
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		if data[p] == 102 {
			goto st29
		}
		goto st0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 9:
			goto st30
		case 32:
			goto st30
		case 100:
			goto st31
		case 110:
			goto st34
		}
		goto st0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		if data[p] == 10 {
			goto tr43
		}
		goto st30
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		if data[p] == 101 {
			goto st32
		}
		goto st0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		if data[p] == 102 {
			goto st33
		}
		goto st0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		switch data[p] {
		case 9:
			goto st30
		case 32:
			goto st30
		}
		goto st0
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		if data[p] == 100 {
			goto st31
		}
		goto st0
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		switch data[p] {
		case 102:
			goto st29
		case 110:
			goto st36
		}
		goto st0
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
		if data[p] == 99 {
			goto st37
		}
		goto st0
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
		if data[p] == 108 {
			goto st38
		}
		goto st0
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
		if data[p] == 117 {
			goto st39
		}
		goto st0
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
		if data[p] == 100 {
			goto st40
		}
		goto st0
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
		if data[p] == 101 {
			goto st41
		}
		goto st0
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
		if data[p] == 10 {
			goto st0
		}
		goto st42
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		if data[p] == 10 {
			goto tr53
		}
		goto st42
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
		if data[p] == 114 {
			goto st44
		}
		goto st0
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
		if data[p] == 97 {
			goto st45
		}
		goto st0
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
		if data[p] == 103 {
			goto st46
		}
		goto st0
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		if data[p] == 109 {
			goto st47
		}
		goto st0
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
		if data[p] == 97 {
			goto st41
		}
		goto st0
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		if data[p] == 42 {
			goto tr58
		}
		goto st0
tr60:
// line 47 "parsegl.rl"

 curline++ 
	goto st49
tr58:
// line 57 "parsegl.rl"

 m0 = p 
	goto st49
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
// line 1269 "parsegl.go"
		switch data[p] {
		case 10:
			goto tr60
		case 42:
			goto st50
		}
		goto st49
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
		switch data[p] {
		case 10:
			goto tr60
		case 42:
			goto st50
		case 47:
			goto tr62
		}
		goto st49
tr62:
// line 57 "parsegl.rl"

 m1 = p-2 
	goto st195
	st195:
		if p++; p == pe {
			goto _test_eof195
		}
	st_case_195:
// line 1301 "parsegl.go"
		switch data[p] {
		case 9:
			goto st195
		case 10:
			goto tr268
		case 32:
			goto st195
		}
		goto tr266
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
		if data[p] == 76 {
			goto st52
		}
		goto st0
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
		if data[p] == 65 {
			goto st53
		}
		goto st0
	st53:
		if p++; p == pe {
			goto _test_eof53
		}
	st_case_53:
		if data[p] == 80 {
			goto st54
		}
		goto st0
	st54:
		if p++; p == pe {
			goto _test_eof54
		}
	st_case_54:
		if data[p] == 73 {
			goto st55
		}
		goto st0
	st55:
		if p++; p == pe {
			goto _test_eof55
		}
	st_case_55:
		switch data[p] {
		case 9:
			goto st56
		case 10:
			goto tr68
		case 32:
			goto st56
		}
		goto st0
tr68:
// line 47 "parsegl.rl"

 curline++ 
	goto st56
	st56:
		if p++; p == pe {
			goto _test_eof56
		}
	st_case_56:
// line 1371 "parsegl.go"
		switch data[p] {
		case 9:
			goto st56
		case 10:
			goto tr68
		case 32:
			goto st56
		case 95:
			goto tr69
		case 99:
			goto tr70
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr69
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr69
			}
		default:
			goto tr69
		}
		goto st0
tr69:
// line 113 "parsegl.rl"

 m0 = p; m4 = 0 
	goto st57
	st57:
		if p++; p == pe {
			goto _test_eof57
		}
	st_case_57:
// line 1407 "parsegl.go"
		switch data[p] {
		case 9:
			goto tr71
		case 10:
			goto tr72
		case 32:
			goto tr71
		case 95:
			goto st57
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st57
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st57
			}
		default:
			goto st57
		}
		goto st0
tr75:
// line 47 "parsegl.rl"

 curline++ 
	goto st58
tr71:
// line 113 "parsegl.rl"

 m1 = p 
	goto st58
tr72:
// line 113 "parsegl.rl"

 m1 = p 
// line 47 "parsegl.rl"

 curline++ 
	goto st58
	st58:
		if p++; p == pe {
			goto _test_eof58
		}
	st_case_58:
// line 1454 "parsegl.go"
		switch data[p] {
		case 9:
			goto st58
		case 10:
			goto tr75
		case 32:
			goto st58
		case 42:
			goto tr76
		case 65:
			goto st61
		case 71:
			goto st98
		}
		goto st0
tr76:
// line 113 "parsegl.rl"

 m4++ 
	goto st59
	st59:
		if p++; p == pe {
			goto _test_eof59
		}
	st_case_59:
// line 1480 "parsegl.go"
		switch data[p] {
		case 9:
			goto st60
		case 10:
			goto tr80
		case 32:
			goto st60
		case 42:
			goto tr76
		case 65:
			goto st61
		case 71:
			goto st98
		}
		goto st0
tr80:
// line 47 "parsegl.rl"

 curline++ 
	goto st60
	st60:
		if p++; p == pe {
			goto _test_eof60
		}
	st_case_60:
// line 1506 "parsegl.go"
		switch data[p] {
		case 9:
			goto st60
		case 10:
			goto tr80
		case 32:
			goto st60
		case 65:
			goto st61
		case 71:
			goto st98
		}
		goto st0
	st61:
		if p++; p == pe {
			goto _test_eof61
		}
	st_case_61:
		if data[p] == 80 {
			goto st62
		}
		goto st0
	st62:
		if p++; p == pe {
			goto _test_eof62
		}
	st_case_62:
		if data[p] == 73 {
			goto st63
		}
		goto st0
	st63:
		if p++; p == pe {
			goto _test_eof63
		}
	st_case_63:
		if data[p] == 69 {
			goto st64
		}
		goto st0
	st64:
		if p++; p == pe {
			goto _test_eof64
		}
	st_case_64:
		if data[p] == 78 {
			goto st65
		}
		goto st0
	st65:
		if p++; p == pe {
			goto _test_eof65
		}
	st_case_65:
		if data[p] == 84 {
			goto st66
		}
		goto st0
	st66:
		if p++; p == pe {
			goto _test_eof66
		}
	st_case_66:
		if data[p] == 82 {
			goto st67
		}
		goto st0
	st67:
		if p++; p == pe {
			goto _test_eof67
		}
	st_case_67:
		if data[p] == 89 {
			goto st68
		}
		goto st0
	st68:
		if p++; p == pe {
			goto _test_eof68
		}
	st_case_68:
		switch data[p] {
		case 9:
			goto st69
		case 10:
			goto tr89
		case 32:
			goto st69
		}
		goto st0
tr89:
// line 47 "parsegl.rl"

 curline++ 
	goto st69
	st69:
		if p++; p == pe {
			goto _test_eof69
		}
	st_case_69:
// line 1607 "parsegl.go"
		switch data[p] {
		case 9:
			goto st69
		case 10:
			goto tr89
		case 32:
			goto st69
		case 103:
			goto tr90
		}
		goto st0
tr90:
// line 115 "parsegl.rl"

 m2 = p 
	goto st70
	st70:
		if p++; p == pe {
			goto _test_eof70
		}
	st_case_70:
// line 1629 "parsegl.go"
		if data[p] == 108 {
			goto st71
		}
		goto st0
	st71:
		if p++; p == pe {
			goto _test_eof71
		}
	st_case_71:
		if data[p] == 95 {
			goto st72
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st72
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st72
			}
		default:
			goto st72
		}
		goto st0
	st72:
		if p++; p == pe {
			goto _test_eof72
		}
	st_case_72:
		switch data[p] {
		case 9:
			goto tr93
		case 10:
			goto tr94
		case 32:
			goto tr93
		case 40:
			goto tr95
		case 95:
			goto st72
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st72
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st72
			}
		default:
			goto st72
		}
		goto st0
tr97:
// line 47 "parsegl.rl"

 curline++ 
	goto st73
tr93:
// line 115 "parsegl.rl"

 m3 = p; f = Func{Name: data[m2:m3], Type: data[m0:m1], Addr: m4} 
	goto st73
tr94:
// line 115 "parsegl.rl"

 m3 = p; f = Func{Name: data[m2:m3], Type: data[m0:m1], Addr: m4} 
// line 47 "parsegl.rl"

 curline++ 
	goto st73
	st73:
		if p++; p == pe {
			goto _test_eof73
		}
	st_case_73:
// line 1708 "parsegl.go"
		switch data[p] {
		case 9:
			goto st73
		case 10:
			goto tr97
		case 32:
			goto st73
		case 40:
			goto st74
		}
		goto st0
tr99:
// line 47 "parsegl.rl"

 curline++ 
	goto st74
tr95:
// line 115 "parsegl.rl"
